# registry-guard-suite

./: .gitignore  Dockerfile  README.md  build.sh  index.html  package-lock.json  package.json  render.yaml  vite.config.ts
.github/workflows/: ci-cd.yml
backend/: build_info.json  pyproject.toml
backend/data/: transactions.json
backend/src/: api.py  main.py
backend/src/registry_guard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/validation/: models.py
backend/tests/: test_api.py  test_models.py
src/: App.test.tsx  App.tsx  index.css  setupTests.ts  test-utils.tsx
src/components/dashboard/: KPICard.tsx  RecentBuilds.tsx
src/components/health/: CurrencyChart.tsx  SchemaViewer.tsx  TransactionChart.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/playground/: ValidationPlayground.tsx
src/components/registry/: ImageDetailPanel.tsx  ImageTable.test.tsx  ImageTable.tsx
src/data/: mocks.ts
src/pages/: Health.tsx  Index.tsx  Playground.tsx  Registry.tsx
src/services/: api.ts
tests/: integration_test.sh
